# sn123

./: CLAUDE.md  MINER_GUIDE.md  README.md  advanced_miner.py  chain_utils.py  comms.py  config.py  cycle.py  generate_and_encrypt.py  initialize_price_history.py  install_reqs.sh  market_data.py  market_data_fallback.py  miner_config.py  miner_monitoring.py  miner_requirements.txt  ml_predictor.py  model.py  plaintext_utils.py  pyproject.toml  requirements.txt  setup_miner.sh  simple_market_data.py  storage.py  test_market_data.py  validator.py  whitepaper.md
